initial commit - core

--- a/src/components/AboutElevatorPitch.astro
+++ b/src/components/AboutElevatorPitch.astro
@@ -1,7 +1,7 @@
 ---
-import Config from "virtual:indiecaster/config";
+import { indieCasterConfig } from "../../indiecaster.config.js";
 
-const { colorSecondaryColor, elevatorPitch } = Config.options;
+const { colorSecondaryColor, elevatorPitch } = indieCasterConfig;
 ---
 
 <div class="base-container-padding elevator-pitch-container">
