--- a/src/components/Subscribe.astro
+++ b/src/components/Subscribe.astro
@@ -1,8 +1,8 @@
 ---
 import { customProperties } from "../utils/custom-properties";
-import Config from "virtual:indiecaster/config";
+import { indieCasterConfig } from "../../indiecaster.config.js";
 
-const { podcastPlayers } = Config.options;
+const { podcastPlayers } = indieCasterConfig;
 const { colorPrimaryColorLight } = customProperties;
 ---
 
