--- a/src/components/ThemeProvider.astro
+++ b/src/components/ThemeProvider.astro
@@ -1,7 +1,7 @@
 ---
-import Config from "virtual:indiecaster/config";
+import { indieCasterConfig } from "../../indiecaster.config.js";
 
-const { colorPrimaryColor } = Config.options;
+const { colorPrimaryColor } = indieCasterConfig;
 ---
 
 <div class="theme">
