--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
-import Config from "virtual:indiecaster/config";
+import { indieCasterConfig } from "../../indiecaster.config.js";
 
-const { colorPrimaryColor, podcastName, socialMedia } = Config.options;
+const { colorPrimaryColor, podcastName, socialMedia } = indieCasterConfig;
 const currentYear = new Date().getFullYear();
 ---
 
