--- a/src/components/EpisodeProfilesFeatured.astro
+++ b/src/components/EpisodeProfilesFeatured.astro
@@ -2,14 +2,43 @@
 import CardPerson from "./CardPerson.astro";
 import { indieCasterConfig } from "../../indiecaster.config.js";
 import type { CollectionEntry } from "astro:content";
+import { getCollection } from "astro:content";
 
 interface Props {
   episode?: CollectionEntry<"episodes">;
 }
 
 const { episode } = Astro.props;
+const { colorPrimaryColor } = indieCasterConfig;
 
-const { hostName, hostProfilePicture, colorPrimaryColor } = indieCasterConfig;
+// Get all hosts data
+const hostsData = (await getCollection("hosts" as any)) as any[];
+const hostsMap = new Map(hostsData.map((host) => [host.slug, host]));
+
+// Host information - handle multiple hosts
+const hosts = [];
+
+if (episode?.data.hosts && episode.data.hosts.length > 0) {
+  // Add all hosts
+  episode.data.hosts.forEach((hostSlug) => {
+    const hostData = hostsMap.get(hostSlug);
+    if (hostData) {
+      hosts.push({
+        name: hostData.data.name,
+        pictureSrc: `profile-images/${hostData.data.profilePicture}`,
+        type: "Host",
+      });
+    }
+  });
+} else {
+  // Fallback to config for backward compatibility
+  const { hostName, hostProfilePicture } = indieCasterConfig;
+  hosts.push({
+    name: hostName,
+    pictureSrc: `profile-images/${hostProfilePicture}`,
+    type: "Host",
+  });
+}
 
 // Get guest information from episode (featured episode is handled at page level)
 let guestName = "Guest";
@@ -35,20 +64,22 @@ const featuredGuest = {
   pictureSrc: `profile-images/${guestProfilePicture}`,
   type: "Guest",
 };
-const host = {
-  name: hostName,
-  pictureSrc: `profile-images/${hostProfilePicture}`,
-  type: "Host",
-};
 ---
 
 <div class="base-container-padding">
   <ul class="reset-list featured-episode-profiles">
-    <li class="featured-episode-profile">
-      <CardPerson person={host}>
-        <h2 class="card-person-name" slot="card-person-name">{host.name}</h2>
-      </CardPerson>
-    </li>
+    {
+      // Show all hosts
+      hosts.map((host) => (
+        <li class="featured-episode-profile">
+          <CardPerson person={host}>
+            <h2 class="card-person-name" slot="card-person-name">
+              {host.name}
+            </h2>
+          </CardPerson>
+        </li>
+      ))
+    }
     {
       // Only show guest if episode has guests
       episode?.data.guests && episode.data.guests.length > 0 && (
